# codeforcespy

./: .gitignore  LICENSE  README.md  crop_banner.py  pyproject.toml  setup.py
codeforcespy/: __init__.py  base.py  clients.py  errors.py  processors.py
codeforcespy/abc/: __init__.py  cobjects.py  endpoints.py  interactions.py  objects.py  protocols.py
codeforcespy/features/: __init__.py  blog.py  contest.py  mixin_base.py  problemset.py  recent.py  user.py
examples/: async_example.py  sync_example.py
tests/: conftest.py  test_all.py  test_async.py  test_sync.py
